2003-03-12  Alexandre Oliva  <aoliva@redhat.com>

	* Reverted 2003-03-02's patch.

2003-03-11  Steve Ellcey  <sje@cup.hp.com>

	* dwarf2dbg.c (generic_dwarf2_emit_offset): New.
	(TC_DWARF2_EMIT_OFFSET): Provide default.
	(out_debug_aranges, out_debug_info): Use it.
	* config/tc-ia64.c (ia64_dwarf2_emit_offset): New.
	(ia64_cons_fix_new): Move FUNC_DTP_RELATIVE handling ...
	(ia64_gen_real_reloc_type): ... here.
	* config/tc-ia64.h (TC_DWARF2_EMIT_OFFSET): New.

2003-03-09  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (s_mips_end): Remove !BFD_ASSEMBLER case.
	(s_mips_ent): Likewise.

2003-03-04  Dmitry Diky  <diwil@mail.ru>

	* config/tc-msp430.c (mcu_types): Add recently announced x1122
	and x1123 devices, add missed x437. 
	(md_show_usage): Sort device list.

2003-03-03  J"orn Rennecke <joern.rennecke@superh.com>

	* config/tc-sh.c (sh_dsp): Replace with preset_target_arch.
	(md_begin): Use preset_target_arch.
	(md_longopts): Make isa option unconditional.
	(md_parse_option): Make OPTION_DSP and OPTION_ISA sh4 / any
	set preset_target_arch.
	(md_apply_fix3): If BFD_ASSEMBLER, adjust SWITCH_TABLE fixups
	by -S_GET_VALUE  (fixP->fx_subsy).
	(tc_gen_reloc): For SWITCH_TABLE fixups, the symbol is fixp->fx_subsy,
	and the addend is 0.
	Adjust addend of R_SH_IND12W relocations by fixp->fx_offset - 4.
	* config/tc-sh.h (TC_FORCE_RELOCATION_SUB_LOCAL): Define.

2003-03-02  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (append_insn): Add handling of
	BFD_RELOC_MIPSEMB_16_PCREL_S2. Avoid emitting unneeded
	BFD_RELOC_16_PCREL_S2 relocs and add earlier warnings about
	misaligned address and reange overflow.
	(macro_build): Add handling of BFD_RELOC_MIPSEMB_16_PCREL_S2. Add
	earlier warnings about misaligned address and reange overflow.
	(mips_ip): Add handling of BFD_RELOC_MIPSEMB_16_PCREL_S2.
	(md_apply_fix): Likewise. Fix warning output.
	(tc_gen_reloc): Add handling of BFD_RELOC_MIPSEMB_16_PCREL_S2.